# hemlock-argparser

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  meson.build  notes.txt
src/: CMakeLists.txt  meson.build
src/argparser/: argparser.c  argparser.h  debug_trace.h  finish.c  finish.h  genhelp.c  genhelp.h  log.c  log.h  meson.build  option.h  parser.c  parser.h  pretty.c  pretty.h  tokenizer.c  tokenizer.h  unused_param.h  validate.c  validate.h
src/example/: cli.c  cli.h  main.c  meson.build
src/hemlock_argparser/: argparser.c  argparser.h  colors.h  debug_trace.h  finish.c  finish.h  genhelp.c  genhelp.h  log.c  log.h  meson.build  option.h  parser.c  parser.h  pretty.c  pretty.h  tokenizer.c  tokenizer.h  unused_param.h  validate.c  validate.h
