
project(
  'hemlock-argparser', 
  'c',
  default_options : [
    'c_std=c11',
    'warning_level=3',
    'default_library=both'
  ],
  license : 'MIT',
  license_files : [ 'LICENSE' ],
  version : '0.2.2',
  meson_version : '>= 1.1.0',
)

cprintf_inc = include_directories('external/cprintf')

subdir('src')

# end of file
